--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   transform: translateY(10px);
 }
 .fade-enter-active {
-  opacity: 0;
-  transform: translateY(10px);
-  animation: 0.3s ease-in-out forwards;
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 .fade-exit {
   opacity: 1;
@@ -14,5 +14,5 @@
 .fade-exit-active {
   opacity: 0;
   transform: translateY(10px);
-  animation: 0.3s ease-in-out forwards;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
